# otus

./: .travis.yml  CMakeLists.txt
allocate/: .travis.yml
allocate/src/: allocator.h
src/: main.cpp  version.h.in
